stop board movement when select visibility toggled

--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,7 @@
 .incorrect {
   background-color: #444444;
 }
+
+.invisible {
+  visibility: hidden;
+}
